# IndexBoostingApproximation

./: .gitignore  CMakeLists.txt  README.md
data/: readme
include/: buffer_manager.h  control_unit.h  gmm.h  neural_network.h  placeholder_strategy.h  radix_spline.h  sig2mod.h  sig2model.h
models/: readme
src/: buffer_manager.cpp  control_unit.cpp  gmm.cpp  neural_network.cpp  placeholder_strategy.cpp  radix_spline.cpp  sig2mod.cpp  sig2model.cpp
tests/: test_sig2mod.cpp  test_sig2model.cpp
